apps/site/web/static/css/_alerts.scss
@import "variables";

.alert-modal-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.8);
  z-index: 1;
}

.alert-modal .btn {
  border: none;
  padding: 0;
}

.alert-list {
  padding: 0;
  list-style: none;

  li {
    margin-top: 10px;

    &:first-child {
      margin-top: 0;

      &.m-t-0 {
        border-top: none;
      }
    }

    &.m-t-0 {
      border-top: 1px solid white;
    }
  }
}

.t-alerts-container {
  padding-left: 1rem;
  padding-right: 1rem;
  margin-top: -1rem;
}

.alert-list-header {
  font-weight: bold;
  padding: 0 1rem 1rem;
}

.alert-card {
  margin: 1rem;
  color: $body-color;
}

.alert-card-header {
  background-color: $alert-color;
  border: 1px solid $alert-color;
  padding: 1rem;

}

.alert-card-body-container {
  border: 1px solid $gray-lightest;
  border-top: 0;
}

.alert-card-body {
  border-bottom: 1px solid $gray-lightest;
  padding-top: 1rem;
  padding-bottom: 1rem;
  // margin on the sides so that the border is narrower as well
  margin-left: 1rem;
  margin-right: 1rem;
}

.alert-card-footer {
  padding: 1rem;
  font-size: $font-size-sm;
}

.card-description-first {
  display: inline;
}

.card-description-rest.in,
.card-description-rest.collapsing {
  display: inline;
  margin-left: -2px;
}

.collapse ~ .btn.show-alert:before {
  content: "View More";
}

.in.collapse ~ .btn.show-alert:before,
.collapsing ~ .btn.show-alert:before {
  content: "View Less";
}

.in.collapse ~ .card-description-ellipsis,
.collapsing ~ .card-description-ellipsis {
  display: none;
}

.alerts-modal-button {
  margin-bottom: 10px;
  text-align: left;
  background-color: $alert-color;
  color: inherit;

  &:hover,
  &:active,
  &:focus {
    background-color: $alert-color;
  }

  p {
    margin: 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  i {
    line-height: 24px;
  }
}

.alert-list-inline {
  padding: 0;
  list-style: none;
}

.alert-inline {
  padding-bottom: 0.5rem;
  border-bottom: 1px solid $gray-lightest;
  margin-bottom: 0.5rem;
}

.alert-inline-icon {
  background-color: $alert-color;
  width: 24px;
  height: 24px;
  padding: 2px;
  border-radius: 50%;
  float: left;

  > i {
    width: 20px;
    height: 20px;
    margin: 1px 2px;
    display: block;
  }
}

.alert-inline-body {
  padding-left: 2rem;
}

.bg-notice {
  background-color: $alert-notice-color;
  border-color: $alert-notice-color;

  &:hover,
  &:active,
  &:focus {
    background-color: $alert-notice-color;
  }
}

